# telegram_finance_bot

./: .gitignore  README.md  categories.py  createdb.sql  db.py  expenses.py  middlewares.py  pyproject.toml  server.py  start.bat
